fix styles on small screen, fix favicon

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -18,4 +18,10 @@
 
 html, body, #root {
   height: 100%;
+  
+}
+
+body {
+  overscroll-behavior: none;
+  min-width: 350px;
 }
